# photo_scripts

./: README.md  organize_photos.py  pyproject.toml  requirements.txt
phtorg/: cli.py  constants.py  logging.py  organizer.py  tpe.py
