[project]
name = "photo-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pillow-heif>=0.9.0",
    "pymediainfo>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2022.7",
    "tabulate>=0.9.0",
    "tqdm>=4.64.1",
]

[tool.uv]
exclude-newer = "2022-12-22T08:00:00Z"
