[project]
name = "phtorg"
version = "0.1.0"
description = "A CLI tool that organizes photos and videos deterministically based on datetime + hash."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click>=8.1.8",
    "pillow-heif>=0.9.0",
    "pymediainfo>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytz>=2022.7",
    "tabulate>=0.9.0",
    "tqdm>=4.64.1",
    "tzlocal>=5.3.1",
]

[project.scripts]
phtorg = 'phtorg.cli:cli'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
